--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,7 @@ h5 {
   display: flex;
   justify-content: space-between;
   width: 327px;
-  margin-top: 66px;
+  margin-top: 36px;
  }
 
  .status-description p {
@@ -385,7 +385,7 @@ h5 {
 
 .supportform2h3 {
     margin-top: 40px;
-    margin-bottom: 60px;
+    margin-bottom: 34px;
     font-size: 24px;
 }
 
